Improve comments and add missing LineReader file